--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
 
         function connectWebSocket() {
 
-            const ws = new WebSocket("ws://localhost:3001");
+            <!-- const ws = new WebSocket("ws://localhost:3001"); -->
+            const ws = new WebSocket((window.location.protocol === "https:" ? "wss://" : "ws://") + window.location.host);
+
           
 
             ws.onmessage = (event) => {
