--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         function connectWebSocket() {
 
             <!-- const ws = new WebSocket("ws://localhost:3001"); -->
-            const ws = new WebSocket((window.location.protocol === "https:" ? "wss://" : "ws://") + window.location.host);
+            const ws = new WebSocket("wss://gps-server.onrender.com"); // เปลี่ยนเป็น URL ของ Render
 
           
 
