new websocket url commit

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         function connectWebSocket() {
 
             <!-- const ws = new WebSocket("ws://localhost:3001"); -->
-            const ws = new WebSocket("wss://gps-server.onrender.com"); // เปลี่ยนเป็น URL ของ Render
+            const ws = new WebSocket("wss://gps-server-gfl0.onrender.com"); // เปลี่ยนเป็น URL ของ Render
 
           
 
