--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <h1>Live GPS Map (Leaflet)</h1>
@@ -24,7 +26,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         let map = L.map('map').setView([14.0, 100.0], 12);
-        
+
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
@@ -35,10 +37,14 @@
 
         function connectWebSocket() {
 
-            <!-- const ws = new WebSocket("ws://localhost:3001"); -->
-            const ws = new WebSocket("wss://gps-server-gfl0.onrender.com"); // เปลี่ยนเป็น URL ของ Render
+            const wsProtocol = window.location.protocol === "https:" ? "wss://" : "ws://";
+            const ws = new WebSocket(wsProtocol + window.location.host);
 
-          
+            ws.onopen = () => {
+                console.log("✅ WebSocket Connected");
+            };
+
+
 
             ws.onmessage = (event) => {
                 const data = JSON.parse(event.data);
@@ -52,10 +58,21 @@
                     marker.openPopup();
                 }
             };
+
+            ws.onerror = (error) => {
+                console.error("❌ WebSocket Error:", error);
+            };
+
+            ws.onclose = () => {
+                console.log("❌ WebSocket Disconnected, reconnecting...");
+                setTimeout(connectWebSocket, 3000);
+            };
+
         }
 
         connectWebSocket();
     </script>
 
 </body>
+
 </html>
