--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
                     map.setView(newPosition, 12);
                     marker.getPopup().setContent(`📍 Lat: ${data.latitude}, Lng: ${data.longitude}, Speed: ${data.speed_knots} km/h, Time: ${data.time}`);
                     marker.openPopup();
+                }else{
+                    console.log("have no lat, lng")
                 }
             };
 
